--- a/.github/workflows/android-feature-ci.yml
+++ b/.github/workflows/android-feature-ci.yml
@@ -20,6 +20,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Lint
+      working-directory: network-sdk-sample
       run: bash ./gradlew lint
 
   tests:
@@ -33,4 +34,5 @@ jobs:
       with:
         java-version: 1.8
     - name: Unit tests
+      working-directory: network-sdk-sample
       run: bash ./gradlew test --stacktrace
