--- a/ui-sdk-components-sample/app/build.gradle
+++ b/ui-sdk-components-sample/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "com.karhoo.samples.networksdk"
+        applicationId "com.karhoo.samples.uisdk.components"
         minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
