--- a/ui-sdk-components-sample/app/build.gradle
+++ b/ui-sdk-components-sample/app/build.gradle
@@ -21,6 +21,29 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "theme"
+    productFlavors {
+        theme1 {
+            dimension "theme"
+        }
+        theme2 {
+            dimension "theme"
+        }
+        theme3 {
+            dimension "theme"
+        }
+    }
+
+    sourceSets.theme1 {
+        res.srcDirs = ['res', 'src/theme1/res']
+    }
+    sourceSets.theme2 {
+        res.srcDirs = ['res', 'src/main/res']
+    }
+    sourceSets.theme3 {
+        res.srcDirs = ['res', 'src/theme3/res']
+    }
 }
 
 dependencies {
@@ -38,6 +61,7 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'joda-time:joda-time:2.10.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
