--- a/ui-sdk-components-sample/app/src/main/AndroidManifest.xml
+++ b/ui-sdk-components-sample/app/src/main/AndroidManifest.xml
@@ -3,13 +3,12 @@
     package="com.karhoo.samples.uisdk.components">
 
     <application
+        android:name="com.karhoo.samples.uisdk.components.SampleApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name="com.karhoo.samples.uisdk.components.SampleApplication">
+        android:supportsRtl="true">
         <activity
             android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
             android:label="@string/title_activity_threedsecure"
@@ -24,10 +23,11 @@
                 <data android:scheme="${applicationId}.braintree" />
             </intent-filter>
         </activity>
-        <activity android:name="com.karhoo.samples.uisdk.components.MainActivity">
+        <activity
+            android:name="com.karhoo.samples.uisdk.components.MainActivity"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
