--- a/ui-sdk-components-sample/app/build.gradle
+++ b/ui-sdk-components-sample/app/build.gradle
@@ -21,6 +21,32 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "theme"
+    productFlavors {
+        theme1 {
+            dimension "theme"
+        }
+        theme2 {
+            dimension "theme"
+        }
+        theme3 {
+            dimension "theme"
+        }
+    }
+
+    // Theme1 uses the default icons and style schemes
+    sourceSets.theme1 {
+        res.srcDirs = ['res', 'src/theme1/res']
+    }
+    // Theme2 uses custom icons and style schemes with a dark primary color and accent
+    sourceSets.theme2 {
+        res.srcDirs = ['res', 'src/main/res']
+    }
+    // Theme3 uses custom icons and style schemes with a light primary color and accent
+    sourceSets.theme3 {
+        res.srcDirs = ['res', 'src/theme3/res']
+    }
 }
 
 dependencies {
