--- a/ui-sdk-components-sample/app/build.gradle
+++ b/ui-sdk-components-sample/app/build.gradle
@@ -50,21 +50,21 @@ android {
 }
 
 dependencies {
-    api 'com.github.karhoo:karhoo-android-ui-sdk:jitpack_migration_1.2.1.25032021-2'
-    api 'com.braintreepayments.api:drop-in:4.4.0'
+    api 'com.github.karhoo:karhoo-android-ui-sdk:1.3.0-rc01'
+    api 'com.braintreepayments.api:drop-in:4.6.0'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.activity:activity:1.2.0-beta01'
+    implementation 'androidx.activity:activity:1.3.0-alpha07'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
