--- a/ui-sdk-dropin-sample/build.gradle
+++ b/ui-sdk-dropin-sample/build.gradle
@@ -18,7 +18,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://flit-tech.bintray.com/Android' }
+        maven { url 'https://jitpack.io' }
         maven {
             url "https://cardinalcommerce.bintray.com/android"
             credentials {
