--- a/network-sdk-sample/app/build.gradle
+++ b/network-sdk-sample/app/build.gradle
@@ -44,7 +44,7 @@ android {
 }
 
 dependencies {
-    api 'com.github.karhoo:karhoo-android-sdk:1.4.0'
+    api 'com.github.karhoo:karhoo-android-sdk:1.4.1-rc1'
     api 'com.braintreepayments.api:drop-in:4.4.0'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
