ui sdk to 1_4_2-rc2

--- a/ui-sdk-dropin-sample/app/build.gradle
+++ b/ui-sdk-dropin-sample/app/build.gradle
@@ -49,7 +49,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.karhoo:karhoo-android-ui-sdk:1.4.0'
+    implementation 'com.github.karhoo:karhoo-android-ui-sdk:1.4.2-rc2'
     api 'com.braintreepayments.api:drop-in:4.4.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
