--- a/ui-sdk-components-sample/app/build.gradle
+++ b/ui-sdk-components-sample/app/build.gradle
@@ -50,7 +50,7 @@ android {
 }
 
 dependencies {
-    api 'com.github.karhoo:karhoo-android-ui-sdk:1.4.3-rc2'
+    api 'com.github.karhoo:karhoo-android-ui-sdk:1.4.3'
     api 'com.braintreepayments.api:drop-in:5.2.1'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
