--- a/ui-sdk-dropin-sample/app/build.gradle
+++ b/ui-sdk-dropin-sample/app/build.gradle
@@ -49,7 +49,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.karhoo:karhoo-android-ui-sdk:1.4.3-rc2'
+    implementation 'com.github.karhoo:karhoo-android-ui-sdk:1.4.3'
     api 'com.braintreepayments.api:drop-in:5.2.1'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
