--- a/ui-sdk-dropin-sample/app/build.gradle
+++ b/ui-sdk-dropin-sample/app/build.gradle
@@ -81,9 +81,9 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.karhoo:karhoo-android-ui-sdk:1.4.3'
+    implementation 'com.github.karhoo:karhoo-android-ui-sdk:1.5.0'
     api 'com.braintreepayments.api:drop-in:5.2.1'
-
+    implementation 'joda-time:joda-time:2.10.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
