--- a/network-sdk-sample/app/src/main/AndroidManifest.xml
+++ b/network-sdk-sample/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.karhoo.samples.networksdk">
 
     <application
@@ -14,7 +15,8 @@
             android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
             android:label="@string/title_activity_threedsecure"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            tools:replace="android:label">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
