Mob 3658 use checkout component in network sdk sample project (#34)
* initial

* Use Checkout component

Co-authored-by: Mostafa Hadian <mostafa.hadian@karhoo.com>

--- a/network-sdk-sample/app/src/main/AndroidManifest.xml
+++ b/network-sdk-sample/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.karhoo.samples.networksdk">
 
     <application
@@ -10,20 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name=".SampleApplication">
-        <activity
-            android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
-            android:label="@string/title_activity_threedsecure"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:scheme="${applicationId}.braintree" />
-            </intent-filter>
-        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,13 +19,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".booking.AdyenResultActivity">
-
-        </activity>
-
-        <service
-            android:name=".booking.AdyenDropInService"
-            android:permission="android.permission.BIND_JOB_SERVICE"/>
     </application>
 
 </manifest>
