--- a/ui-sdk-dropin-sample/app/build.gradle
+++ b/ui-sdk-dropin-sample/app/build.gradle
@@ -81,7 +81,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.karhoo:karhoo-android-ui-sdk:1.5.1'
+    implementation 'com.github.karhoo:karhoo-android-ui-sdk:1.5.2-rc1'
     api 'com.braintreepayments.api:drop-in:5.2.1'
     implementation 'joda-time:joda-time:2.10.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
